--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container" id="container">
     <h1>Hello GitHub</h1>
     <p>New change code</p>
-    <button type="button" class="btn btn-outline-primary">Click me</button>
+    <button id="myBtn" type="button" class="btn btn-outline-primary">Click me</button>
 </div>
 </body>
 </html>
